# NsFemOptim

cpp/: .clang-format  .clangd  CMakeLists.txt
cpp/assets/: c3.geo  c3.msh  h_0.00125.geo  h_0.0025.geo  h_0.005.geo  h_0.005.msh  h_0.01.geo  h_0.01.msh  h_0.025.geo  h_0.025.msh
cpp/execs/: CMakeLists.txt
cpp/execs/AssemblyTest/src/: assemblyTest.cpp
cpp/execs/GsTest/: CMakeLists.txt
cpp/execs/GsTest/src/: gsTest.cpp
cpp/execs/HeatEquation/: CMakeLists.txt
cpp/execs/HeatEquation/src/: heatEquation.cpp
cpp/execs/L2Projection/: CMakeLists.txt
cpp/execs/L2Projection/src/: l2Projection.cpp
cpp/execs/MatrixTest/: CMakeLists.txt
cpp/execs/MatrixTest/src/: matrixTest.cpp
cpp/execs/MeshParser/: CMakeLists.txt
cpp/execs/MeshParser copy/src/: meshParser.cpp
cpp/execs/MeshParser/src/: meshParser.cpp
cpp/execs/NavierStokes/: CMakeLists.txt
cpp/execs/NavierStokes/include/NavierStokes/: borders.h  buildContext.h  chorinCuda.h  chorinCudaConfig.h  chorinEigen.h  dfgCondtions.h  nsConfig.h  solution.h
cpp/execs/NavierStokes/src/: borders.cpp  buildContext.cpp  chorinCuda.cu  chorinEigen.cpp  navierStokes.cpp  nsConfig.cpp
cpp/execs/SpmvTest/: CMakeLists.txt
cpp/execs/SpmvTest/src/: spmvTest.cpp  spmvTest.cu
cpp/libs/: CMakeLists.txt
cpp/libs/CudaUtils/: CMakeLists.txt
cpp/libs/CudaUtils/include/cu/: blas.h  conjGradF.h  conjGradHost.h  csr.h  csrF.h  cusparse.h  datatypes.h  dss.h  dssSolver.h  gaussSeidel.h  gaussSeidelHost.h  sparse.h  spmm.h  spmv.h  stopwatch.h  vec.h
cpp/libs/CudaUtils/include/cu/solvers/: abstractSolver.h  solverFactory.h
cpp/libs/CudaUtils/src/: blas.cu  conjGradF.cu  conjGradHost.cu  csrF.cu  cusparse.cu  dss.cu  dssSolver.cu  dummy.cpp  gaussSeidel.cu  gaussSeidelHost.cu  sparse.cu  spmm.cu  spmv.cu  stopwatch.cu  vec.cu
cpp/libs/CudaUtils/src/solvers/: solverFactory.cu
cpp/libs/Element/: CMakeLists.txt
cpp/libs/Element/include/element/: affineTransform.h  calc.h  element.h  factory.h  p0.h  p1.h  p2.h  point.h  triangleIntegrator.h  type.h
cpp/libs/Element/src/: affineTransform.cpp  calc.cpp  element.cpp  factory.cpp  p0.cpp  p1.cpp  p2.cpp  point.cpp  triangleIntegrator.cpp
cpp/libs/Fem/: CMakeLists.txt
cpp/libs/Fem/include/fem/: chorinContext.h  chorinCsr.h  chorinMatrices.h  dirichletNode.h  fastConvection.h
cpp/libs/Fem/src/: chorinCsr.cpp  chorinMatrices.cpp  fastConvection.cpp
cpp/libs/LinAlg/: CMakeLists.txt
cpp/libs/LinAlg/include/linAlg/: csrMatrix.h  eigen.h
cpp/libs/LinAlg/include/linalg/: concepts.h  csrMatrix.h  eigen.h  gaussSeidel.h  graphs.h  io.h  jacobi.h  sparseBuilder.h  sparseDokBuilder.h  vectors.h
cpp/libs/LinAlg/src/: csrMatrix.cpp  eigen.cpp  gaussSeidel.cpp  graphs.cpp  io.cpp  jacobi.cpp  sparseBuilder.cpp  sparseDokBuilder.cpp
cpp/libs/Mesh/: CMakeLists.txt
cpp/libs/Mesh/include/mesh/: affineTransform.h  colorScale.h  concreteMesh.h  drawMesh.h  element.h  gmsh.h  interpolator.h  io.h  point.h  triMesh.h  triangleLookup.h
cpp/libs/Mesh/src/: affineTransform.cpp  colorScale.cpp  concreteMesh.cpp  drawMesh.cpp  element.cpp  gmsh.cpp  interpolator.cpp  io.cpp  triangleLookup.cpp
cpp/libs/Utils/: CMakeLists.txt
cpp/libs/Utils/include/utils/: concepts.h  configParser.h  stopwatch.h
cpp/libs/Utils/src/: configParser.cpp  stopwatch.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/AssemblyTest/: CMakeLists.txt
cpp/tests/CgTest/: CMakeLists.txt
cpp/tests/CgTest/src/: cgTest.cpp  cgTest.cu
cpp/tests/CudaUtilsTest/: CMakeLists.txt
cpp/tests/CudaUtilsTest/src/: cudaUtilsTest.cu  uploadTest.cu
cpp/tests/GsTest/src/: gsTest.cpp
cpp/tests/SolverTest/: CMakeLists.txt
cpp/tests/SolverTest/src/: solverTest.cpp
cpp/tests/SpmvTest/src/: spmvTest.cu
jl/: assembly.jl  coordTransform.jl  elements.jl  heatEquation.jl  integration.jl  localMatrix.jl  plotMesh.jl  test.jl
